[package]
name = "raft_kv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
jsonrpsee = { version = "0.21.0", features = ["client", "http-client", "server", "macros", ] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.35", features = ["full"] }
console-subscriber = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rand = "0.8.5"

[lib]
path = "src/lib/lib.rs"

